# TensorTradeCPP

./: CMakeLists.txt  main.cpp
core/: base.h  clock.h  dexceptions.cpp  dexceptions.h
data/: data_wrapper.py
env/default/: actions.cpp  actions.h  informers.cpp  informers.h  observers.cpp  observers.h  rewards.cpp  rewards.h  stoppers.cpp  stoppers.h
env/generic/: environment.h
env/generic/components/: action_listener.h  action_scheme.h  informer.h  observer.h  reward_scheme.h  stopper.h
executables/: main.cpp  strategy_test1.cpp  training_example.cpp
feed/api/: boolean.h  dstring.h  float.h  generic.h
feed/core/: base.cpp  base.h  feed.h  operators.h
include/tensortrade/core/: base.h  clock.h  context.h  dexceptions.h  types.h
oms/exchanges/: exchange.cpp  exchange.h
oms/instruments/: exchange_pair.cpp  exchange_pair.h  instrument.cpp  instrument.h  quantity.cpp  quantity.h  trading_pair.cpp  trading_pair.h
oms/orders/: broker.cpp  broker.h  create.h  criteria.cpp  criteria.h  order.cpp  order.h  order_listener.h  order_spec.cpp  order_spec.h  trade.cpp  trade.h
oms/services/execution/: alpaca.cpp  alpaca.h  simulated.cpp  simulated.h
oms/services/slippage/: slippage_model.h
oms/wallets/: ledger.h  portfolio.cpp  portfolio.h  wallet.cpp  wallet.h
py_wrapper/: cdd.py  data_wrapper.py  get_stock_data.py
src/core/: context.cpp  dexceptions.cpp
src/env/default/: actions.cpp  informers.cpp  observers.cpp  rewards.cpp  stoppers.cpp
src/feed/core/: base.cpp
src/oms/exchanges/: exchange.cpp
src/oms/instruments/: instrument.cpp  quantity.cpp  trading_pair.cpp
src/oms/orders/: broker.cpp  criteria.cpp  order.cpp  order_spec.cpp  trade.cpp
src/wallets/: portfolio.cpp  wallet.cpp
ta-lib/: Makefile  Makefile.in  bin  config.status  configure  libtool
ta-lib/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ta-lib/include/: ta_config.h  ta_config.h.in
ta-lib/src/: Makefile  Makefile.in  libta_lib.la
ta-lib/src/.libs/: libta_lib.lai  libta_lib.so.0.0.0
ta-lib/src/ta_abstract/: Makefile  Makefile.in  libta_abstract_gc.la  libta_abstract_gc_la-ta_abstract.lo  libta_abstract_gc_la-ta_def_ui.lo  libta_abstract_gc_la-ta_frame.lo  libta_abstract_gc_la-ta_func_api.lo  libta_abstract_gc_la-ta_group_idx.lo  libta_abstract_gc_la-table_a.lo  libta_abstract_gc_la-table_b.lo  libta_abstract_gc_la-table_c.lo  libta_abstract_gc_la-table_d.lo  libta_abstract_gc_la-table_e.lo  libta_abstract_gc_la-table_f.lo  libta_abstract_gc_la-table_g.lo  libta_abstract_gc_la-table_h.lo  libta_abstract_gc_la-table_i.lo  libta_abstract_gc_la-table_j.lo  libta_abstract_gc_la-table_k.lo  libta_abstract_gc_la-table_l.lo  libta_abstract_gc_la-table_m.lo  libta_abstract_gc_la-table_n.lo  libta_abstract_gc_la-table_o.lo  libta_abstract_gc_la-table_p.lo  libta_abstract_gc_la-table_q.lo  (+40 more)
tests/core/: test_base.cpp  test_clock.cpp
tests/feed/: test_api.cpp  test_core.cpp
tests/oms/: test_instrument.cpp  test_orders.cpp  test_wallets.cpp
(+216 files in other folders)
